Creado buscador de lugares
con su funcionalidad, listado y redirección a detalle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!-- Textos del layout crear lugar -->
     <string name="txt_nombre_lugar">Nombre del lugar</string>
     <string name="txt_descripcion_lugar">Descripción del lugar</string>
+    <string name="txt_direccion_lugar">Dirección del lugar</string>
     <string name="txt_telefono_lugar">Teléfono del lugar</string>
     <string name="txt_btn_crear_lugar">Crear nuevo lugar</string>
 
